fix horizontal scroll

--- a/src/less/blocks/footer.less
+++ b/src/less/blocks/footer.less
@@ -1,14 +1,16 @@
 .footer {
-  display: flex;
   width: 100%;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 10px;
   border-top: 2px solid #d7e2e8;
   padding: 40px 25px 60px;
   font-size: 0.89rem;
   line-height: 1.5;
-  width: 100%;
+}
+
+.footer__columns {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 10px;
 }
 
 .footer__col {
