--- a/src/less/blocks/nav-header.less
+++ b/src/less/blocks/nav-header.less
@@ -2,26 +2,31 @@
   font-size: 1.11rem;
   line-height: 1.1;
   margin-bottom: 3px;
-  width: 100%;
 
-  overflow-x: hidden;
-  position: relative;
-}
+  --gradient-padding: calc((130px - 105px) / 2);
 
-.nav-header::before {
-  content: '';
-  position: absolute;
-  width: 1950px;
-  height: 105px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
-  background-color: var(--brand-color);
-  background-image: url(../img/nav-bg.jpg);
+  background-image:
+    url(../img/nav-bg.jpg),
+    linear-gradient(
+      to bottom,
+      transparent 0,
+      transparent var(--gradient-padding),
+      var(--brand-color) var(--gradient-padding),
+      var(--brand-color) 50%,
+      transparent 50%,
+      transparent
+    ),
+    linear-gradient(
+      to top,
+      transparent 0,
+      transparent var(--gradient-padding),
+      var(--brand-color) var(--gradient-padding),
+      var(--brand-color) 50%,
+      transparent 50%,
+      transparent
+    );
   background-repeat: no-repeat;
   background-position: center center;
-  z-index: -10;
 }
 
 .nav-header__items {
@@ -72,9 +77,6 @@
   column-gap: 12px;
   align-items: center;
 
-  width: calc(100% - 6px);
-  height: calc(100% - 6px);
-
   margin: 3px;
 }
 
@@ -93,8 +95,8 @@
 }
 
 @media (max-width: @width-desktop) {
-  .nav-header::before {
-    content: initial;
+  .nav-header {
+    background-image: none;
   }
 
   .nav-header__items {
@@ -109,6 +111,7 @@
     flex-basis: 0;
     flex-grow: 0;
     flex-shrink: 0;
+    height: auto;
 
     background-color: var(--brand-color);
   }
