--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -2,9 +2,9 @@
 
 .page {
   min-width: @width-mobile;
-  max-width: 100vw;
-  width: 100%;
-  min-height: 100vh;
+
+  height: 100%;
+  min-height: 100%;
   padding: 0;
   margin: 0;
 
@@ -34,8 +34,7 @@
 
 .main {
   grid-area: main;
-  width: 100vw;
-  overflow-x: hidden;
+  width: 100%;
 }
 
 .nav-footer {
